Fixed small UI issue on mobile

--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -14,7 +14,7 @@ h1 {
 }
 
 h2 {
-	font-size: 1.25em;
+	font-size: 1.2em;
 	font-weight: 800;
 	color: #090f42;
 }
@@ -104,19 +104,19 @@ h3 {
 	position: absolute;
 	bottom: 0;
 	transition: all ease 0.6s;
-	width: 90%;
+	width: 94%;
 	height: 90%;
-	margin: 5%;
+	margin: 5% 3%;
 	box-shadow: 0px 0px 20px -10px #000000;
 	z-index: 9001;
-	padding: 25px 15px;
+	padding: 23px 10px;
 	display: block;
 	overflow-y: scroll;
 }
 
 .overlay {
 	position: absolute;
-	height: 100%;
+	height: 140%;
 	width: 100%;
 	background-color: rgba(0, 0, 0, 0.7);
 	opacity: 0.75;
@@ -143,7 +143,8 @@ h3 {
 
 
 .summary h1 {
-	font-size: 1.85em;
+	font-size: 1.8em;
+	line-height: 1.5em;
 	}
 .summary h2 {
 	font-size: 1.1em;
@@ -199,6 +200,10 @@ h3 {
 	float: left;
 }
 
+.controls .button {
+	background-color: rgb(9, 15, 66);
+}
+
 
 .button {
 	background-color: #5a93b7;
@@ -245,10 +250,14 @@ h3 {
 	
 	
 @media (max-width: 800px) { 
+	
+	.margintop-30 {
+		margin-top: 10px;	
+	}
 
 	.submit {
 		width: 80%;
-		margin: 10px 10%;
+		margin: 16px 10%;
 	}
 
 	.button {
@@ -256,8 +265,9 @@ h3 {
 	}
 	
 	.summary h1 {
-		font-size: 1.75em;
+		font-size: 1.7em;
 		margin-top: 10px;
+		line-height: 1.2em;
 	}
 	
 
